# wildcard-obfuscation

./: .gitignore  Cargo.toml  Readme.md  try.sage
app/: main.rs  wildcard.rs
benches/: wildcard.rs
scripts/: bench.sh  linear_classifier.hs  linear_classifier.sh  multimatch_bench.sh  pattern_generator.hs  plaintext.sh
src/: alt_pattern.rs  lib.rs  main.rs  protocol.rs  rand_mpz.rs
