[package]
name = "wildcard"
version = "0.1.0"
authors = ["Brent Carmer <bcarmer@galois.com>"]

[dependencies]
rust-gmp = "0.5.0"
rand = "0.4.2"
num = "0.1.42"
clap = "2.31.2"

[dev-dependencies]
criterion = "0.2"

[[bin]]
name = "wildcard"
path = "app/wildcard.rs"

[[bench]]
name = "wildcard"
harness = false
